--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "obsidian"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
+nvim-oxi = "0.1"
