--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ nvim-oxi = { git = "https://github.com/noib3/nvim-oxi" }
 serde = { version = "1.0", features = ["derive"] }
 serde_path_to_error = "0.1"
 thiserror = "1.0"
+unicode-segmentation = "1.9"
+regex = "1.6"
+lazy_static = "1.0"
