--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -16,10 +16,10 @@ body:
       If relevant, add a minimal example so that we can reproduce the error by running the code. It is very important for the snippet to be as succinct (minimal) as possible, so please take time to trim down any irrelevant code to help us debug efficiently. We are going to copy-paste your code and we expect to get the same result as you did: avoid any external data, and include the relevant imports, etc. For example:
 
       ```lua
-      # All necessary imports at the beginning
+      -- All necessary imports at the beginning
       require "obsidian"
 
-      # A succinct reproducing example trimmed down to the essential parts:
+      -- A succinct reproducing example trimmed down to the essential parts:
       error("Oh no!")
       ```
 
