--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lua/deps/lua_yaml"]
 	path = lua/deps/lua_yaml
-	url = git@github.com:exosite/lua-yaml.git
+	url = https://github.com/exosite/lua-yaml.git
