--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Style
-        uses: JohnnyMorganz/stylua-action@v1.1.0
+        uses: JohnnyMorganz/stylua-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          version: 0.15.1
           args: --check lua/ after/ test/
 
   checks:
