--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -31,3 +31,4 @@ jobs:
           commit_user_name: github-actions[bot]
           commit_message: 'chore: auto generate docs'
           branch: ${{ github.head_ref }}
+          push_options: --force
