--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,7 +103,9 @@ jobs:
     needs: [checks, style]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v4
