--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ on:
 
 env:
   runtime: ~/.local/share/nvim/site/pack/vendor/start
+  plenary-git: https://github.com/nvim-lua/plenary.nvim
+  plenary-path: ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
 
 jobs:
   style:
@@ -84,6 +86,7 @@ jobs:
             mkdir -p _neovim
             curl -sL ${{ matrix.nvim_url }} | tar xzf - --strip-components=1 -C "${PWD}/_neovim"
           }
+          git clone --depth 1 ${{ env.plenary-git }} ${{ env.plenary-path }}
           ln -s $(pwd) ${{ env.runtime }}
 
       - name: Prepare
