--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -23,7 +23,7 @@ jobs:
       - name: panvimdoc
         uses: kdheepak/panvimdoc@v3.0.5
         with:
-          vimdoc: obsidian.nvim
+          vimdoc: obsidian
           description: a plugin for writing and navigating an Obsidian vault
           pandoc: README.md
           toc: true
