--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -13,7 +13,7 @@ body:
     description: |
       Please provide a clear and concise description of what the bug is.
 
-      If relevant, add a minimal example so that we can reproduce the error by running the code. It is very important for the snippet to be as succinct (minimal) as possible, so please take time to trim down any irrelevant code to help us debug efficiently. We are going to copy-paste your code and we expect to get the same result as you did: avoid any external data, and include the relevant imports, etc. For example:
+      If relevant, add a minimal example or configuration so that we can reproduce the error by running the code. It is very important for the snippet to be as succinct (minimal) as possible, so please take time to trim down any irrelevant code to help us debug efficiently. We are going to copy-paste your code and we expect to get the same result as you did: avoid any external data, and include the relevant imports, etc. For example:
 
       ```lua
       -- All necessary imports at the beginning
@@ -37,8 +37,9 @@ body:
       Please run the following and paste the output below.
       ```sh
       nvim --version
-      nvim --headless -c 'lua print(require("obsidian").VERSION)' -c q
+      nvim --headless -c 'lua print("Obsidian v" .. require("obsidian").VERSION)' -c q
       ```
+      In addition, please include the versions of any other relevant plugins. Or simply include your `lazy-lock.json` file if you use [lazy.nvim](https://github.com/folke/lazy.nvim) as your plugin manager.
   validations:
     required: true
 - type: markdown
