add TOC to README

--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -26,7 +26,7 @@ jobs:
           vimdoc: obsidian
           description: a plugin for writing and navigating an Obsidian vault
           pandoc: README.md
-          toc: true
+          toc: false
           version: NVIM v0.8.0
           demojify: false
 
