--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -29,6 +29,8 @@ jobs:
           toc: false
           version: NVIM v0.8.0
           demojify: false
+          dedupsubheadings: false
+          shiftheadinglevelby: -1
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
