Add contributing guide

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: 0.15.1
-          args: --check lua/ after/ test/
+          args: --check .
 
   checks:
     name: ${{ matrix.task.name }} (${{ matrix.os }})
