add workflow dispatch for panvimdoc

--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - README.md
       - .github/workflows/panvimdoc.yml
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
