--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,8 +63,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          submodules: true
 
       - run: date +%F > todays-date
 
@@ -79,7 +77,7 @@ jobs:
         if: ${{ matrix.packages }}
         run: ${{ matrix.manager }} install ${{ matrix.packages }}
 
-      - name: Install neovim
+      - name: Install neovim and dependencies
         run: |
           mkdir -p ${{ env.runtime }}
           test -d _neovim || {
