--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Patch plugin docs tag
         run: |
           # Replace the title tag "*obsidian.txt*" with "*obsidian.nvim*"
-          sed '1 s/obsidian\.txt/obsidian.nvim/' doc/obsidian.txt > doc/obsidian.txt
+          sed -i '1 s/obsidian\.txt/obsidian.nvim/' doc/obsidian.txt
 
       - uses: stefanzweifel/git-auto-commit-action@v5
         if: github.event_name != 'pull_request'
