--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
         run: |
           # Download neovim.
           # winget install neovim
-          curl -sL ${{ matrix.nvim_url }}
+          curl ${{ matrix.nvim_url }}
           unzip nvim-win64.zip
           mv nvim-win64 _neovim
           rm nvim-win64.zip
