--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,8 +95,10 @@ jobs:
           # Download neovim.
           # winget install neovim
           curl -o nvim-win64.zip ${{ matrix.nvim_url }}
-          Expand-Archive -F nvim-win64.zip _neovim
+          Expand-Archive -F nvim-win64.zip .
+          Move-Item -Path nvim-win64 -Destination _neovim
           ls
+          ls _neovim
 
       - name: Install plugin dependencies
         run: |
