--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -78,6 +78,7 @@ jobs:
       - name: Clean up
         run: |
           rm -rf _neovim/
+          git status
 
       - uses: stefanzweifel/git-auto-commit-action@v5
         if: github.event_name != 'pull_request'
